MER-159 Added 10 spots with comments and images. Added dto's, deleted unused code.